--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -30,11 +30,30 @@
         <servlet-name>Home</servlet-name>
         <url-pattern>/Home</url-pattern>
     </servlet-mapping>
-    
+        <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>servlets.Login</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>SignUp</servlet-name>
+        <servlet-class>servlets.SignUp</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SignUp</servlet-name>
+        <url-pattern>/SignUp</url-pattern>
+    </servlet-mapping>
 
   <welcome-file-list>
     <welcome-file>Home</welcome-file>
   </welcome-file-list>
-
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/Error.jsp</location>
+  </error-page>
 
 </web-app>
